# simulation

./: .gitignore  Cargo.toml  README.md
path/: 1029.path  1105-0.path  1105-1.path
src/: chassis.rs  gaussian.rs  locate.rs  main.rs  obstacle.rs  obstacles.rs  outlines.rs  path_builder.rs  polar.rs  ray_cast.rs  ticker.rs  track.rs
src/obstacle/: builder.rs  enlarger.rs  outlines.rs  ray_cast.rs  simplify.rs
src/obstacles/: segment.rs
